--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>experience</title>
-    <link rel="stylesheet" href="stylesexp.css">
+    <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
 
@@ -14,7 +14,7 @@
 
         <div class="main-nav">
             <ul class="nav">
-            <div class="item-1"><li><a href="https://www.instagram.com/inoki.er">Rei Koni</a></li></div>
+            <li class="item-1"><a href="https://www.instagram.com/inoki.er">Rei Koni</a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="experience.html">Experience</a></li>
             </ul>
@@ -41,7 +41,11 @@
 
         </main>
 
-        <footer><p class="copyright">Copyright 2021, Rei Koni</p></footer>
+            <footer>
+                <a href="https://www.instagram.com/inoki.er" class="social instagram">instagram</a>
+                <a href="https://teamtreehouse.com/giorgiogrossi" class="social github">Github</a>
+                <p class="copyright">Copyright 2021, Rei Koni</p>
+              </footer>
     </div>
 </body>
 </html>
