--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Rei Koni's profile</title>
+  <title>Rei-Koni-profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -12,7 +12,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <div class="item-1"><li><a href="https://www.instagram.com/inoki.er">Rei Koni</a></li></div>
+          <li class="item-1"><a href="https://www.instagram.com/inoki.er">Rei Koni</a></li>
           <li><a href="#">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
@@ -55,7 +55,8 @@
 
     </main>
     <footer>
-
+      <a href="https://www.instagram.com/inoki.er" class="social instagram">instagram</a>
+      <a href="https://teamtreehouse.com/giorgiogrossi" class="social github">Github</a>
       <p class="copyright">Copyright 2021, Rei Koni</p>
     </footer>
   </div>
